--- a/public/index.html
+++ b/public/index.html
@@ -4,10 +4,11 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <link rel="stylesheet" href="style_reset.css">
   <link href="https://fonts.cdnfonts.com/css/new-york-extra-large" rel="stylesheet" />
-    <link href="https://fonts.cdnfonts.com/css/sf-mono" rel="stylesheet" />
-    <link href="https://fonts.cdnfonts.com/css/sf-pro-display" rel="stylesheet" />
-    <link href="https://fonts.cdnfonts.com/css/sf-pro-display" rel="stylesheet" />
+  <link href="https://fonts.cdnfonts.com/css/sf-mono" rel="stylesheet" />
+  <link href="https://fonts.cdnfonts.com/css/sf-pro-display" rel="stylesheet" />
+  <link href="https://fonts.cdnfonts.com/css/sf-pro-display" rel="stylesheet" />
   <title>Nordic Rose</title>
 </head>
 
